# 16.82-CoDR

./: .gitignore  LICENSE  README.md  optimizer.py
82_cpp_opt/: 82opt.cpp  82opt.h  CMakeLists.txt  fitness.cpp
82_py/: CoDR_equations.py  Landing.py  Takeoff_model.py  Takeoff_model_plotter.py  airplane.py  airplane_optimization_results.pkl  climb_model.py  cruise_drag_model.py  cruise_model.py  mass_closure.py  mass_closure_opt.py  mass_closure_post.py  optimizer.py  pareto_plotter.py  power_gen.py  power_gen_usage.py  simple_model.py  structural_wing_model.py  takeoff_model.py
82_py/archive/: optimizer.py  pareto_plotter.py
CoDR_equations/: CoDR_equations.py
optimizer_py/: optimizer.py
